<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SocialPlay</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="title_activity_main"></string>
    <string name="title_activity_menu">Menu</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="action_example">Example action</string>
    <string name="ultimosposts">Últimos posts</string>
    <string name="seguindo">Seguindo</string>
    <string name="relevantes">Mais relevantes</string>

    <string name="drawer_open">Drawer Opened</string>
    <string name="drawer_close">Drawer Closed</string>

    <string-array name="drawer_list">
        <item>Item 1</item>
        <item>Item 2</item>
        <item>Item 3</item>
        <item>Item 4</item>
        <item>Item 5</item>
        <item>Item 6</item>
        <item>Item 7</item>
        <item>Item 8</item>
        <item>Item 9</item>
    </string-array>

    <string name="nome1">Primeira Sessão</string>
    <string name="nome2">Segunda Sessão</string>
    <string name="nome3">Terceira Sessão</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="textoregistro">Ainda não é registrado?</string>
    <string name="cadastrese">Cadastre-se</string>
    <string name="nome">Nome</string>

    <string name="title_activity_second">SecondActivity</string>
    <string name="action_second_activity">SecondActivity</string>
    <string name="action_facebook">Facebook</string>
    <string name="action_youtube">YouTube</string>
    <string name="action_google_plus">Google Plus</string>
    <string name="action_linkedin">LinkedIn</string>
    <string name="action_whatsapp">WhatsApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">opened</string>
    <string name="navigation_drawer_close">closed</string>

</resources>
