<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:id="@+id/seila"
    android:background="#ffffffff">

   <LinearLayout
       android:orientation="vertical"
       android:layout_width="10000dp"
       android:layout_height="180dp"
       android:paddingTop="15dp"
       android:background="#00b7b7"
       android:id="@+id/bartop">


       <ImageView
           android:layout_width="wrap_content"
           android:layout_height="150dp"
           android:id="@+id/ImgLogo"
           android:layout_gravity="center_horizontal"
           android:src="@drawable/logo3" />
   </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/login"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:id="@+id/txtLogin"
        android:textColor="#00b7b7"
        android:layout_below="@+id/bartop"
        android:layout_alignParentStart="true" />



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtLogin"
        android:textColor="#c0000000"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:singleLine="true"
        android:padding="0dp"
        android:gravity="center_horizontal"
        android:layout_below="@+id/txtLogin"
        android:layout_alignParentStart="true"

        android:textColorHint="#cccccc"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/senha"
        android:id="@+id/textView"
        android:textColor="#00b7b7"
        android:layout_marginLeft="30dp"
        android:layout_below="@+id/edtLogin"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/edtSenha"
        android:textColor="#c0000000"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:singleLine="true"
        android:textColorHint="#cccccc"
        android:padding="0dp"
        android:gravity="center_horizontal"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
         />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entrar"
        android:id="@+id/btnEntrar"
        android:layout_below="@+id/edtSenha"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="40dp"
        android:textColor="#ffffff"
        android:background="#00b7b7" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/textoregistro"
        android:id="@+id/textView8"
        android:textColor="#696969"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="36dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:textColor="#009090"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="10dp"
        android:text="@string/cadastrese"
        android:id="@+id/btnCadastrarse"
        android:background="#ffffff"
        android:layout_alignBottom="@+id/textView8"
        android:layout_toEndOf="@+id/textView8" />



</RelativeLayout>
