<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#ffffff"
    tools:context="br.edu.fatecriopreto.projetoandoid.Main"
    android:padding="0dp"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:background="#ff00cccc"
        android:id="@+id/linearLayout">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="300dp"
            android:padding="11dp"
            android:src="@drawable/imgmenu"
            android:id="@+id/imgMenu" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="90dp"
            android:paddingRight="1dp"
            android:paddingLeft="2dp"
            android:background="@drawable/retangulo_corners"
            android:textColor="#96141414"
            android:id="@+id/edtBuscar2"
            android:drawableRight="@drawable/imgbuscar"
            android:drawablePadding="5dp"
            android:singleLine="true"


            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="300dp"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:id="@+id/imgNewPost"
            android:src="@drawable/imgnovo" />
        </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ultimosposts"
        android:id="@+id/txtUltimos"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="7dp"
        android:textColor="#A9A9A9"
        android:textSize="15dp"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/seguindo"
        android:id="@+id/txtSeguindo"
        android:textColor="#ff00cccc"
        android:textSize="15dp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginRight="10dp"
        android:layout_marginTop="7dp"
        android:layout_below="@+id/linearLayout"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/relevantes"
        android:id="@+id/txtRelevantes"
        android:textColor="#A9A9A9"
        android:textSize="15dp"
        android:textStyle="bold"
        android:gravity="right"
        android:layout_marginRight="12dp"
        android:layout_marginTop="7dp"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentEnd="true" />


    <ListView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/listView"
        android:layout_below="@+id/txtUltimos"
        android:layout_alignParentStart="true" />




</RelativeLayout>

